--- a/Style1.css
+++ b/Style1.css
@@ -20,6 +20,7 @@
              
             color: #fff;
         }
+        
         h4{
         
             color: #000;
@@ -541,6 +542,10 @@
                 flex-direction: column;
                 max-width: 300px;
               }
+              .user-info {
+                color: #000;
+            }
+            
           
               .accordion-item {
                 border: 1px solid #ccc;
@@ -557,4 +562,19 @@
                 display: none;
                 padding: 10px;
               }
+
+              body {
+                background-color: #333;
+                color: #000;
+            }
+            
+            h1, h2, h3, h4, h6, h7, p, g, s, span, table {
+                color: #000;
+            }
+            
+            a, o, b, q {
+                color: rgb(251, 7, 7);
+            }
+            
+            
     
